--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,15 +14,15 @@ services:
     networks:
       - mynetwork
 
-  api:
-    image: blog-api
-    restart: always
-    ports:
-      - "8080:8080"
-    depends_on:
-      - "postgres"
-    networks:
-      - mynetwork
+  #api:
+  #  image: blog-api
+  #  restart: always
+  #  ports:
+  #    - "8080:8080"
+  #  depends_on:
+  #    - "postgres"
+  #  networks:
+  #    - mynetwork
 
 networks:
   mynetwork:
